fixed audio not turning back on when saves were cleared (plus other mild ux changes)

--- a/Assignment 3/Main.storyboard
+++ b/Assignment 3/Main.storyboard
@@ -306,6 +306,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="Ehr-nD-Ug0"/>
         <segue reference="OSE-6b-F7v"/>
     </inferredMetricsTieBreakers>
 </document>
